Fix div css overlap

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ h1 {
     color: blue ;
     font-size: 72 ;
 }
-div {
+.command {
     border: 1px solid ;
     border-color: lightblue ;
     font-size: x-large ;
@@ -16,6 +16,6 @@ div {
     box-shadow: 0 0 3px 0px #00000033 ;
 }
 
-div:hover {
+.command:hover {
     color: red ;
 }
